--- a/package.json
+++ b/package.json
@@ -9,13 +9,11 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^13.0.0",
-    "i18next": "^23.0.0",
-    "html2pdf.js": "^0.10.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "typescript": "^5.0.0"
   }
 }
