--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rice-analyzer-clean",
+  "name": "rice-analyzer-full",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "html2pdf.js": "^0.10.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
