--- a/package.json
+++ b/package.json
@@ -1,20 +1,1 @@
-{
-  "name": "rice-analyzer-full",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "html2pdf.js": "^0.10.1"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^5.0.0",
-    "typescript": "^5.0.0"
-  }
-}
+{ "name": "rice-analyzer", "version": "1.0.0", "private": true, "scripts": { "dev": "vite", "build": "vite build", "preview": "vite preview" }, "dependencies": { "react": "^18.2.0", "react-dom": "^18.2.0", "html2pdf.js": "^0.10.1" }, "devDependencies": { "@vitejs/plugin-react": "^4.0.0", "vite": "^5.0.0", "typescript": "^5.0.0" } }
