--- a/package.json
+++ b/package.json
@@ -1,1 +1,18 @@
-{ "name": "rice-analyzer", "version": "1.0.0", "private": true, "scripts": { "dev": "vite", "build": "vite build", "preview": "vite preview" }, "dependencies": { "react": "^18.2.0", "react-dom": "^18.2.0", "html2pdf.js": "^0.10.1" }, "devDependencies": { "@vitejs/plugin-react": "^4.0.0", "vite": "^5.0.0", "typescript": "^5.0.0" } }
+{
+  "name": "rice-analyzer-vision",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "html2pdf.js": "^0.10.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^5.0.0"
+  }
+}
