--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
-  "name": "rice-analyzer",
+  "name": "rice-analyzer-ui",
   "scripts": {
-    "build": "echo 'No build required'"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "dependencies": {}
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "html2pdf.js": "^0.10.1",
+    "axios": "^1.6.0"
+  },
+  "devDependencies": {
+    "vite": "^5.0.0",
+    "@vitejs/plugin-react": "^4.0.0"
+  }
 }
