--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rice-analyzer-ui",
+  "name": "rice-analyzer",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,7 +12,7 @@
     "axios": "^1.6.0"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0"
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^5.0.0"
   }
 }
