--- a/package.json
+++ b/package.json
@@ -1,18 +1,8 @@
+
 {
-  "name": "rice-analyzer",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+  "name": "functions",
+  "version": "1.0.0",
   "dependencies": {
-    "axios": "^1.6.0",
-    "html2pdf.js": "^0.10.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^5.0.0"
+    "openai": "^4.0.0"
   }
 }
